kustomize/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-base-app
  labels:
    app: gitops-base-app
spec:
  selector:
    matchLabels:
      app: gitops-base-app
  template:
    metadata:
      labels:
        app: gitops-base-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: gitops-base-app
        image: 752222480905.dkr.ecr.eu-west-1.amazonaws.com/gitops-base-app
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 80m
            memory: 128Mi
